--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "deploy": "cp -r dist/* /var/www/shum.dev"
+    "deploy": "rm -rf /var/www/shum.dev/* && cp -r dist/* /var/www/shum.dev"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
